Split Inode into FileInode and DirInode